--- a/Web Pages/Games/games.html
+++ b/Web Pages/Games/games.html
@@ -52,7 +52,7 @@
                 <p>Stumble is my first game development project, making this game took a great deal of trial and error. But eventually, I got a working model as a 
                     foundation to what will later become a fully fledged, multi-level game. This was produced using the Unity framework, and the Bolt and Sunnyland 
                     assets. The game is currently not supported on mobile and tablets.</p>
-                    <button onclick="location.href='https://ajouhari.com/games/stumble/'" type="button"><span>Play Beta</span></button>
+                    <button onclick="location.href='./stumble.html'" type="button"><span>Play Beta</span></button>
             </div>
             <div class="icon">
                 <img src="../../Resources/Icons/Fox Cover.png" alt="Stumble">
