--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <img class="logo" src="./Resources/Logo/logo-letters.png">
                 <nav>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./Web Pages/">About</a></li>
-                    <li><a href="./Web Pages/">Algorithms</a></li>
-                    <li><a href="./Web Pages/">Web Design</a></li>
-                    <li><a href="./Web Pages/">Games</a></li>
+                    <li><a href="./Web Pages/About/about.html">About</a></li>
+                    <li><a href="./Web Pages/Algorithms/algorithms.html">Algorithms</a></li>
+                    <li><a href="./Web Pages/Web Design/web-design.html">Web Design</a></li>
+                    <li><a href="./Web Pages/Games/games.html">Games</a></li>
                 </nav>
             </div>
         </div>
