--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./Stylesheet/style.css" type="text/css" rel="stylesheet">
+    <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
