--- a/Web Pages/Games/games.html
+++ b/Web Pages/Games/games.html
@@ -15,7 +15,7 @@
         <!-- Navigation Bar -->
         <div id="navigation">
             <div class="info">
-                <img class="logo" src="../Resources/Logo/logo-letters.png">
+                <img class="logo" src="../../Resources/Logo/logo-letters.png">
                 <nav>
                     <li><a href="../../index.html">Home</a></li>
                     <li><a href="../About/about.html">About</a></li>
@@ -25,7 +25,7 @@
                 </nav>
             </div>
         </div>
-        <div id="banner">
+        <div id="banner" class="general">
             <div class="banner-text">
                 <h1>Faster, Better Code</h1>
             </div>
