--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </nav>
             </div>
         </div>
-        <div id="banner">
+        <div id="banner" class="main">
             <div class="banner-text">
                 <h1>Faster, Better Code</h1>
             </div>
