--- a/Web Pages/Web Design/web-design.html
+++ b/Web Pages/Web Design/web-design.html
@@ -25,7 +25,7 @@
                 </nav>
             </div>
         </div>
-        <div id="banner">
+        <div id="banner" class="general">
             <div class="banner-text">
                 <h1>Faster, Better Code</h1>
             </div>
