--- a/Web Pages/About/about.html
+++ b/Web Pages/About/about.html
@@ -15,7 +15,7 @@
         <!-- Navigation Bar -->
         <div id="navigation">
             <div class="info">
-                <img class="logo" src="../Resources/Logo/logo-letters.png">
+                <img class="logo" src="../../Resources/Logo/logo-letters.png">
                 <nav>
                     <li><a href="../../index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
