--- a/Algorithms/algorithms.html
+++ b/Algorithms/algorithms.html
@@ -8,16 +8,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../../Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="../Stylesheet/general.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
         <!-- Navigation Bar -->
         <div id="navigation">
             <div class="info">
-                <img class="logo" src="../../Resources/Logo/logo-letters.png">
+                <img class="logo" src="../Resources/Logo/logo-letters.png">
                 <nav>
-                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="../About/about.html">About</a></li>
                     <li><a href="./algorithms.html">Algorithms</a></li>
                     <li><a href="../Web Design/web-design.html">Web Design</a></li>
@@ -27,7 +27,7 @@
         </div>
         <div id="banner" class="general">
             <div class="banner-text">
-                <h1>Faster, Better Code</h1>
+                <h1>Fast & Secure</h1>
             </div>
         </div>
         <script>
@@ -55,7 +55,7 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms/tree/master/Easy'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="../../Resources/Icons/gears-icon.png" alt="General Algorithms">
+                <img src="../Resources/Icons/gears-icon.png" alt="General Algorithms">
             </div>
         </article>
         <hr>
@@ -69,7 +69,7 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms/tree/master/Search'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="../../Resources/Icons/nodes-icon.png" alt="Search Algorithms">
+                <img src="../Resources/Icons/nodes-icon.png" alt="Search Algorithms">
             </div>
         </article>
         <hr>
@@ -83,7 +83,7 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="../../Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
+                <img src="../Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
             </div>
         </article>
         <hr>
@@ -93,11 +93,11 @@
         <!-- Contact Information -->
         <article class="flex">
             <div class="icons">
-                <img src="../../Resources/Logo/logo.png" alt="logo">
+                <img src="../Resources/Logo/logo.png" alt="logo">
                 <icons class="flex">
-                    <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="../../Resources/Icons/linkedin-icon.png"></a>
-                    <a href="https://github.com/ajouhari"><img src="../../Resources/Icons/github-icon.png"></a>
-                    <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../../Resources/Icons/stack-overflow-icon.png"></a>
+                    <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="../Resources/Icons/linkedin-icon.png"></a>
+                    <a href="https://github.com/ajouhari"><img src="../Resources/Icons/github-icon.png"></a>
+                    <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../Resources/Icons/stack-overflow-icon.png"></a>
                 </icons>
             </div>
             <div class="info">
