--- a/About/about.html
+++ b/About/about.html
@@ -8,16 +8,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../../Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="../Stylesheet/general.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
         <!-- Navigation Bar -->
         <div id="navigation">
             <div class="info">
-                <img class="logo" src="../../Resources/Logo/logo-letters.png">
+                <img class="logo" src="../Resources/Logo/logo-letters.png">
                 <nav>
-                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="../Algorithms/algorithms.html">Algorithms</a></li>
                     <li><a href="../Web Design/web-design.html">Web Design</a></li>
@@ -27,7 +27,7 @@
         </div>
         <div id="banner" class="general">
             <div class="banner-text">
-                <h1>Faster, Better Code</h1>
+                <h1>Fast And Secure Code</h1>
             </div>
         </div>
         <script>
@@ -48,7 +48,7 @@
         <div class="spacer"></div>
         <article class="flex">
             <div class="about-image">
-                <img src="../../Resources/Personal/abdulrahman.jpg" alt="Abdulrahman Jouhari">
+                <img src="../Resources/Personal/abdulrahman.jpg" alt="Abdulrahman Jouhari">
             </div>
             <div class="about-description">
                 <p>To be able to achieve momentous tasks using only a computer with an internet connection is an ability I never take for granted. 
@@ -74,11 +74,11 @@
         <!-- Contact Information -->
         <article class="flex">
             <div class="icons">
-                <img src="../../Resources/Logo/logo.png" alt="logo">
+                <img src="../Resources/Logo/logo.png" alt="logo">
                 <icons class="flex">
-                    <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="../../Resources/Icons/linkedin-icon.png"></a>
+                    <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="../Resources/Icons/linkedin-icon.png"></a>
                     <a href="https://github.com/ajouhari"><img src="../Resources/Icons/github-icon.png"></a>
-                    <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../../Resources/Icons/stack-overflow-icon.png"></a>
+                    <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../Resources/Icons/stack-overflow-icon.png"></a>
                 </icons>
             </div>
             <div class="info">
