--- a/Web Design/web-design.html
+++ b/Web Design/web-design.html
@@ -8,16 +8,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="../../Stylesheet/general.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
         <!-- Navigation Bar -->
         <div id="navigation">
             <div class="info">
-                <img class="logo" src="../Resources/Logo/logo-letters.png">
+                <img class="logo" src="../../Resources/Logo/logo-letters.png">
                 <nav>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../../index.html">Home</a></li>
                     <li><a href="../About/about.html">About</a></li>
                     <li><a href="../Algorithms/algorithms.html">Algorithms</a></li>
                     <li><a href="./web-design.html">Web Design</a></li>
@@ -54,7 +54,7 @@
                     <button onclick="location.href='https://github.com/ajouhari/web-development'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="../Resources/Icons/web-design-icon.png" alt="Web Design">
+                <img src="../../Resources/Icons/web-design-icon.png" alt="Web Design">
             </div>
         </article>
         <hr>
@@ -64,11 +64,11 @@
         <!-- Contact Information -->
         <article class="flex">
             <div class="icons">
-                <img src="../Resources/Logo/logo.png" alt="logo">
+                <img src="../../Resources/Logo/logo.png" alt="logo">
                 <icons class="flex">
-                    <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="../Resources/Icons/linkedin-icon.png"></a>
-                    <a href="https://github.com/ajouhari"><img src="../Resources/Icons/github-icon.png"></a>
-                    <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../Resources/Icons/stack-overflow-icon.png"></a>
+                    <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="../../Resources/Icons/linkedin-icon.png"></a>
+                    <a href="https://github.com/ajouhari"><img src="../../Resources/Icons/github-icon.png"></a>
+                    <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../../Resources/Icons/stack-overflow-icon.png"></a>
                 </icons>
             </div>
             <div class="info">
