--- a/Algorithms/algorithms.html
+++ b/Algorithms/algorithms.html
@@ -20,7 +20,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../About/about.html">About</a></li>
                     <li><a href="./algorithms.html">Algorithms</a></li>
-                    <li><a href="../Web Design/web-design.html">Web Design</a></li>
+                    <li><a href="../Web-Design/web-design.html">Web Design</a></li>
                     <li><a href="../Games/games.html">Games</a></li>
                 </nav>
             </div>
