--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./About/about.html">About</a></li>
                     <li><a href="./Algorithms/algorithms.html">Algorithms</a></li>
-                    <li><a href="./Web Design/web-design.html">Web Design</a></li>
+                    <li><a href="./Web-Design/web-design.html">Web Design</a></li>
                     <li><a href="./Games/games.html">Games</a></li>
                 </nav>
             </div>
@@ -109,7 +109,7 @@
                 <img src="./Resources/Logo/logo.png" alt="logo">
                 <icons class="flex">
                     <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="./Resources/Icons/linkedin-icon.png"></a>
-                    <a href="https://github.com/ajouhari"><img src="../Resources/Icons/github-icon.png"></a>
+                    <a href="https://github.com/ajouhari"><img src="./Resources/Icons/github-icon.png"></a>
                     <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="./Resources/Icons/stack-overflow-icon.png"></a>
                 </icons>
             </div>
