--- a/About/about.html
+++ b/About/about.html
@@ -27,7 +27,7 @@
         </div>
         <div id="banner" class="general">
             <div class="banner-text">
-                <h1>Fast And Secure Code</h1>
+                <h1>Fast & Secure</h1>
             </div>
         </div>
         <script>
