--- a/Games/stumble.html
+++ b/Games/stumble.html
@@ -27,7 +27,7 @@
         </div>
         <div id="banner" class="general">
             <div class="banner-text">
-                <h1>Faster, Better Code</h1>
+                <h1>Fast & Secure</h1>
             </div>
         </div>
         <script>
