--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="banner" class="main">
             <div class="banner-text">
-                <h1>Faster, Better Code</h1>
+                <h1>Fast & Secure</h1>
             </div>
         </div>
         <script>
