--- a/About/about.html
+++ b/About/about.html
@@ -46,7 +46,10 @@
 
     <main>
         <div class="spacer"></div>
-        <article class="flex">
+        <article class="flex about">
+            <div class="about-image-cropped">
+                <img src="../Resources/Personal/abdulrahman-cropped.jpg" alt="Abdulrahman Jouhari">
+            </div>
             <div class="about-image">
                 <img src="../Resources/Personal/abdulrahman.jpg" alt="Abdulrahman Jouhari">
             </div>
