--- a/Algorithms/algorithms.html
+++ b/Algorithms/algorithms.html
@@ -47,6 +47,9 @@
     <main>
         <div class="spacer"></div>
         <article class="flex">
+            <div class="mobile">
+                <img src="../Resources/Icons/gears-icon.png" alt="General Algorithms">
+            </div>
             <div class="info">
                 <h1>General Algorithms</h1>
                 <p>Many of our everyday tasks are rather menial, and can easily be automated or assisted by computer 
@@ -61,6 +64,9 @@
         <hr>
 
         <article class="flex">
+            <div class="mobile">
+                <img src="../Resources/Icons/nodes-icon.png" alt="Search Algorithms">
+            </div>
             <div class="info">
                 <h1>Search Algorithms</h1>
                 <p>Search algorithms have two primary function: to find if a path exists between two locations, and if so, to find the 
@@ -75,6 +81,9 @@
         <hr>
 
         <article class="flex">
+            <div class="mobile">
+                <img src="../Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
+            </div>
             <div class="info">
                 <h1>Sort Algorithms</h1>
                 <p>With today’s big data, with their lists large enough to compose a book, it becomes increasingly important 
