--- a/Games/games.html
+++ b/Games/games.html
@@ -47,6 +47,9 @@
     <main>
         <div class="spacer"></div>
         <article class="flex">
+            <div class="mobile">
+                <img src="../Resources/Icons/Fox Cover.png" alt="Stumble">
+            </div>
             <div class="info">
                 <h1>Stumble</h1>
                 <p>Stumble is my first game development project, making this game took a great deal of trial and error. But eventually, I got a working model as a 
