--- a/Web-Design/web-design.html
+++ b/Web-Design/web-design.html
@@ -47,6 +47,9 @@
     <main>
         <div class="spacer"></div>
         <article class="flex">
+            <div class="mobile">
+                <img src="../Resources/Icons/web-design-icon.png" alt="Web Design">
+            </div>
             <div class="info">
                 <h1>Web Design</h1>
                 <p>Even though I like to bash some websites for being buggy and having a bad design, a journey of a thousand miles starts with one step, and it never 
