--- a/Web-Design/web-design.html
+++ b/Web-Design/web-design.html
@@ -74,6 +74,16 @@
                     <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../Resources/Icons/stack-overflow-icon.png"></a>
                 </icons>
             </div>
+            <div class="footer-navigation">
+                <h2>Menu:</h2>
+                <nav>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../About/about.html">About</a></li>
+                    <li><a href="../Algorithms/algorithms.html">Algorithms</a></li>
+                    <li><a href="./web-design.html">Web Design</a></li>
+                    <li><a href="../Games/games.html">Games</a></li>
+                </nav>
+            </div>
             <div class="info">
                 <p>For any inquires, recommendations, or bug reports, please contact the email listed 
                     below. I will try to reply within a reasonable amount of time. The site is under 
