--- a/index.html
+++ b/index.html
@@ -125,14 +125,23 @@
                     <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="./Resources/Icons/stack-overflow-icon.png"></a>
                 </icons>
             </div>
+            <div class="footer-navigation">
+                <h2>Quick Links:</h2>
+                <nav>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./About/about.html">About</a></li>
+                    <li><a href="./Algorithms/algorithms.html">Algorithms</a></li>
+                    <li><a href="./Web-Design/web-design.html">Web Design</a></li>
+                    <li><a href="./Games/games.html">Games</a></li>
+                </nav>
+            </div>
             <div class="info">
+                <h2>Contact:</h2>
                 <p>For any inquires, recommendations, or bug reports, please contact the email listed 
                     below. I will try to reply within a reasonable amount of time. The site is under 
-                    construction and more projects are being worked on. Happy Coding :) <br> <br>
-                    For inquires: <br>
-                    official@ajouhari.com <br> <br>
-                    For reccomendations:<br>
-                    support@ajouhari.com</p>
+                    construction and more projects are being worked on. Happy Coding :) <br><br>
+                    For inquires: official@ajouhari.com <br>
+                    For recommendations: support@ajouhari.com</p>
             </div>
         </article>
         <!-- Copyright Notice -->
