--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AJouhari Home</title>
     <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
 </head>
 <body>
