--- a/header.html
+++ b/header.html
@@ -8,15 +8,17 @@
 </head>
 <body>
   <div class="topnav" id="myTopnav">
-    <a href="./index.html"><img src="Resources/Logo/logo-letters.png"></a>
-    <nav>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./About/about.html">About</a></li>
-      <li><a href="./Algorithms/algorithms.html">Algorithms</a></li>
-      <li><a href="./Web-Design/web-design.html">Web Design</a></li>
-      <li><a href="./Games/games.html">Games</a></li>
-      <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
-    </nav>
+    <div class="content">
+      <a href="./index.html"><img src="Resources/Logo/logo-letters.png"></a>
+      <nav>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./About/about.html">About</a></li>
+        <li><a href="./Algorithms/algorithms.html">Algorithms</a></li>
+        <li><a href="./Web-Design/web-design.html">Web Design</a></li>
+        <li><a href="./Games/games.html">Games</a></li>
+        <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
+      </nav>
+    </div>
   </div>
   <script>
   function myFunction() {
