--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJouhari Home</title>
     <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous">
-    </script>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
     $("#header").load("header.html"); 
@@ -25,7 +21,7 @@
     <header>
         <div id="header"></div>
     </header>
-    
+
     <main>
         <div class="spacer"></div>
         <article class="flex">
