--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </script> 
 </head>
 <body>
+    <header>
+        <div id="header"></div>
+    </header>
 
     <main>
         <div class="spacer"></div>
