--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AJouhari Home</title>
+    <title>Home</title>
     <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
@@ -21,7 +21,6 @@
     <header>
         <div id="header"></div>
     </header>
-
     <main>
         <div class="spacer"></div>
         <article class="flex">
@@ -91,7 +90,6 @@
         </article>
         <hr>
     </main>
-
     <footer>
         <div id="footer"></div>
     </footer>
