--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Header</title>
   <link href="./Stylesheet/header.css" type="text/css" rel="stylesheet">
 </head>
 <body>
