--- a/error.html
+++ b/error.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="./Stylesheet/error.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <div id="banner" class="error">
+    <div class="banner">
         <div class="banner-text">
             <h1>Whoops!</h1>
         </div>
