--- a/Pages/header.html
+++ b/Pages/header.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Header</title>
-  <link href="./Stylesheet/header.css" type="text/css" rel="stylesheet">
+  <link href="../Stylesheet/header.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <div class="topnav" id="myTopnav">
     <div class="content">
-      <a href="./index.html"><img src="Resources/Logo/logo-letters.png"></a>
+      <a href="../index.html"><img src="../Resources/Logo/logo-letters.png"></a>
       <nav>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./About/about.html">About</a></li>
-        <li><a href="./Algorithms/algorithms.html">Algorithms</a></li>
-        <li><a href="./Web-Design/web-design.html">Web Design</a></li>
-        <li><a href="./Games/games.html">Games</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./algorithms.html">Algorithms</a></li>
+        <li><a href="./web-design.html">Web Design</a></li>
+        <li><a href="./games.html">Games</a></li>
         <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
       </nav>
     </div>
