--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
@@ -26,10 +26,10 @@
         <div class="spacer"></div>
         <article class="flex about">
             <div class="about-image-cropped">
-                <img src="../Resources/Personal/abdulrahman-cropped.jpg" alt="Abdulrahman Jouhari">
+                <img src="./Resources/Personal/abdulrahman-cropped.jpg" alt="Abdulrahman Jouhari">
             </div>
             <div class="about-image">
-                <img src="../Resources/Personal/abdulrahman.jpg" alt="Abdulrahman Jouhari">
+                <img src="./Resources/Personal/abdulrahman.jpg" alt="Abdulrahman Jouhari">
             </div>
             <div class="about-description">
                 <p>To be able to achieve momentous tasks using only a computer with an internet connection is an ability I never take for granted. 
