--- a/algorithms.html
+++ b/algorithms.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithms</title>
-    <link href="../Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
@@ -26,7 +26,7 @@
         <div class="spacer"></div>
         <article class="flex">
             <div class="mobile">
-                <img src="../Resources/Icons/gears-icon.png" alt="General Algorithms">
+                <img src="./Resources/Icons/gears-icon.png" alt="General Algorithms">
             </div>
             <div class="info">
                 <h1>General Algorithms</h1>
@@ -36,14 +36,14 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms/tree/master/Easy'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="../Resources/Icons/gears-icon.png" alt="General Algorithms">
+                <img src="./Resources/Icons/gears-icon.png" alt="General Algorithms">
             </div>
         </article>
         <hr>
 
         <article class="flex">
             <div class="mobile">
-                <img src="../Resources/Icons/nodes-icon.png" alt="Search Algorithms">
+                <img src="./Resources/Icons/nodes-icon.png" alt="Search Algorithms">
             </div>
             <div class="info">
                 <h1>Search Algorithms</h1>
@@ -53,14 +53,14 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms/tree/master/Search'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="../Resources/Icons/nodes-icon.png" alt="Search Algorithms">
+                <img src="./Resources/Icons/nodes-icon.png" alt="Search Algorithms">
             </div>
         </article>
         <hr>
 
         <article class="flex">
             <div class="mobile">
-                <img src="../Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
+                <img src="./Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
             </div>
             <div class="info">
                 <h1>Sort Algorithms</h1>
@@ -70,7 +70,7 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="../Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
+                <img src="./Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
             </div>
         </article>
         <hr>
