--- a/footer.html
+++ b/footer.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
-    <link href="../Stylesheet/footer.css" type="text/css" rel="stylesheet">
+    <link href="./Stylesheet/footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <article class="flex">
         <div class="icons">
-            <img src="../Resources/Logo/logo.png" alt="logo">
+            <img src="./Resources/Logo/logo.png" alt="logo">
             <icons class="flex">
-                <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="../Resources/Icons/linkedin-icon.png"></a>
-                <a href="https://github.com/ajouhari"><img src="../Resources/Icons/github-icon.png"></a>
-                <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="../Resources/Icons/stack-overflow-icon.png"></a>
+                <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="./Resources/Icons/linkedin-icon.png"></a>
+                <a href="https://github.com/ajouhari"><img src="./Resources/Icons/github-icon.png"></a>
+                <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="./Resources/Icons/stack-overflow-icon.png"></a>
             </icons>
         </div>
         <div class="footer-navigation">
             <h2>Quick Links:</h2>
             <nav>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./algorithms.html">Algorithms</a></li>
                 <li><a href="./web-design.html">Web Design</a></li>
