--- a/header.html
+++ b/header.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Header</title>
-  <link href="../Stylesheet/header.css" type="text/css" rel="stylesheet">
+  <link href="./Stylesheet/header.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <div class="topnav" id="myTopnav">
     <div class="content">
-      <a href="../index.html"><img src="../Resources/Logo/logo-letters.png"></a>
+      <a href="./index.html"><img src="./Resources/Logo/logo-letters.png"></a>
       <nav>
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./algorithms.html">Algorithms</a></li>
         <li><a href="./web-design.html">Web Design</a></li>
