--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Nobody likes code that breaks or has an extremely long runtime. But that’s the harsh reality we have to face. 
                     There’s tons of bad code all over the internet. That’s where I come in to fix it. I write my code to 
                     perfection, producing programs that won’t break and with a runtime that is efficient as possible.</p>
-                    <button onclick="location.href='./About/about.html'" type="button"><span>About</span></button>
+                    <button onclick="location.href='./about.html'" type="button"><span>About</span></button>
             </div>
             <div class="icon">
                 <img src="./Resources/Icons/gears-icon.png" alt="Aims & Objectives">
@@ -48,7 +48,7 @@
                 <h1>Algorithms</h1>
                 <p>Algorithms are much like the gears that keep a machine running. They are critical to many 
                     operations, and how they’re coded may save time when you can least afford it.</p>
-                    <button onclick="location.href='./Algorithms/algorithms.html'" type="button"><span>Algorithms</span></button>
+                    <button onclick="location.href='./algorithms.html'" type="button"><span>Algorithms</span></button>
             </div>
             <div class="icon">
                 <img src="./Resources/Icons/nodes-icon.png" alt="Algorithms">
@@ -65,7 +65,7 @@
                 <p>Sometimes I feel like cleaning my eyes out with soap after seeing the monstrosity that is a 
                     poorly designed, buggy website. But fear no more! Here I will show you what to do (and what 
                     not to do) when building a website.</p>
-                    <button onclick="location.href='./Web-Design/web-design.html'" type="button"><span>Web Design</span></button>
+                    <button onclick="location.href='./web-design.html'" type="button"><span>Web Design</span></button>
             </div>
             <div class="icon">
                 <img src="./Resources/Icons/web-design-icon.png" alt="Web Design">
@@ -82,7 +82,7 @@
                 <p>There’s is no better feeling than that of a breezy summer night as a kid, staying indoors
                      and playing your favorite game. Games are a great way to relax and enjoy the moment, and 
                      that’s what I aim for when creating my video games.</p>
-                    <button onclick="location.href='./Games/games.html'" type="button"><span>Games</span></button>
+                    <button onclick="location.href='./games.html'" type="button"><span>Games</span></button>
             </div>
             <div class="icon">
                 <img src="./Resources/Icons/controller-icon.png" alt="Games">
