--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
-    $("#header").load("./Pages/header.html"); 
-    $("#footer").load("./Pages/footer.html"); 
+    $("#header").load("header.html"); 
+    $("#footer").load("footer.html"); 
     });
     </script> 
 </head>
