They Call Me Fix It Felix

--- a/stumble.html
+++ b/stumble.html
@@ -22,21 +22,24 @@
         <div id="header"></div>
     </header>
     <main>
-        <div class="spacer"></div>
-        <article class="flex">
-            <iframe src="https://itch.io/embed-upload/2233743?color=333333" allowfullscreen="" width="980" height="640" frameborder="0"><a href="https://ajouhari.itch.io/stumble">Play Stumble on itch.io</a></iframe>
+        <article class="game flex">
+            <h1 class="error">Unfortunately, stumble is not yet supported in mobile and tablet :/</h1>
+            <h1 class="title">Stumble (In Production)</h1>
+            <iframe class="large" src="https://itch.io/embed-upload/2233743?color=333333" allowfullscreen="" width="1050" height="685" frameborder="0"><a href="https://ajouhari.itch.io/stumble">Play Stumble on itch.io</a></iframe>
+            <iframe class="small" src="https://itch.io/embed-upload/2233743?color=333333" allowfullscreen="" width="900" height="590" frameborder="0"><a href="https://ajouhari.itch.io/stumble">Play Stumble on itch.io</a></iframe>
         </article>
         <hr>
-        <article class="flex">
+        <article class="info flex">
             <div class="credits">
+                <h2>Credits</h2>
                 <p>By Abdulrahman Jouhari<br>
                 Framework: Unity<br>
                 Assets used: Bolt, Sunnyland<br></p>
                 <button onclick="location.href='https://ajouhari.itch.io/stumble'" type="button"><span>Alternate Link</span></button>
             </div>
             <div class="description">
-                <p>Description:<br><br>
-                In an unpleasant surprise, Fabio the fox finds out that his brother Felix was taken hostage! To rescue his brother, 
+                <h2>Description:</h2>
+                <p>In an unpleasant surprise, Fabio the fox finds out that his brother Felix was taken hostage! To rescue his brother, 
                 Fabio sets out in a mission to cross the dangerous lands of Venaire, where the paths are winding and the people are 
                 not to be trusted! Can you help save him save Felix?</p>
             </div>
