--- a/footer.html
+++ b/footer.html
@@ -7,36 +7,38 @@
     <link href="./Stylesheet/footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <article class="flex">
-        <div class="social">
-            <img src="./Resources/Logo/logo.png" alt="logo" class="logo">
-            <icons class="flex">
-                <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="./Resources/Icons/linkedin-icon.png"></a>
-                <a href="https://github.com/ajouhari"><img src="./Resources/Icons/github-icon.png"></a>
-                <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="./Resources/Icons/stack-overflow-icon.png"></a>
-            </icons>
-        </div>
-        <div class="navigation">
-            <h2>Quick Links:</h2>
-            <nav class="flex">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./algorithms.html">Algorithms</a></li>
-                <li><a href="./web-design.html">Web Design</a></li>
-                <li><a href="./games.html">Games</a></li>
-            </nav>
-        </div>
-        <div class="contact">
-            <h2>Contact:</h2>
-            <p>For any inquires, recommendations, or bug reports, please contact the email listed 
-                below. I will try to reply within a reasonable amount of time. The site is under 
-                construction and more projects are being worked on. Happy Coding :) <br><br>
-                Inquires: official@ajouhari.com <br>
-                Support: support@ajouhari.com</p>
-        </div>
-    </article>
+    <footer>
+        <article class="flex">
+            <div class="social">
+                <img src="./Resources/Logo/logo.png" alt="logo" class="logo">
+                <icons class="flex">
+                    <a href="https://www.linkedin.com/in/abdulrahman-jouhari/"><img src="./Resources/Icons/linkedin-icon.png"></a>
+                    <a href="https://github.com/ajouhari"><img src="./Resources/Icons/github-icon.png"></a>
+                    <a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari?tab=profile"><img src="./Resources/Icons/stack-overflow-icon.png"></a>
+                </icons>
+            </div>
+            <div class="navigation">
+                <h2>Quick Links:</h2>
+                <nav class="flex">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./algorithms.html">Algorithms</a></li>
+                    <li><a href="./web-design.html">Web Design</a></li>
+                    <li><a href="./games.html">Games</a></li>
+                </nav>
+            </div>
+            <div class="contact">
+                <h2>Contact:</h2>
+                <p>For any inquires, recommendations, or bug reports, please contact the email listed 
+                    below. I will try to reply within a reasonable amount of time. The site is under 
+                    construction and more projects are being worked on. Happy Coding :) <br><br>
+                    Inquires: official@ajouhari.com <br>
+                    Support: support@ajouhari.com</p>
+            </div>
+        </article>
+    </footer>
     <!-- Copyright Notice -->
-    <hr>
+    <div class="footer-hr"><hr></div>
     <div class="copyright">
         <p>Copyright © 2020 AJouhari</p>
     </div>
