--- a/header.html
+++ b/header.html
@@ -7,33 +7,35 @@
   <link href="./Stylesheet/header.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <div class="topnav" id="myTopnav">
-    <div class="content">
-      <a href="./index.html"><img src="./Resources/Logo/logo-letters.png"></a>
-      <nav>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./algorithms.html">Algorithms</a></li>
-        <li><a href="./web-design.html">Web Design</a></li>
-        <li><a href="./games.html">Games</a></li>
-        <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
-      </nav>
+  <header>
+    <div class="topnav" id="myTopnav">
+      <div class="content">
+        <a href="./index.html"><img src="./Resources/Logo/logo-letters.png"></a>
+        <nav>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./algorithms.html">Algorithms</a></li>
+          <li><a href="./web-design.html">Web Design</a></li>
+          <li><a href="./games.html">Games</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
+        </nav>
+      </div>
     </div>
-  </div>
-  <script>
-  function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-      x.className += " responsive";
-    } else {
-      x.className = "topnav";
+    <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
     }
-  }
-  </script>
-  <div class="banner">
-    <div class="banner-text">
-        <h1>Fast & Secure</h1>
+    </script>
+    <div class="banner">
+      <div class="banner-text">
+          <h1>Fast & Secure</h1>
+      </div>
     </div>
-  </div>
+  </header>
 </body>
 </html>
