Changed Footer Email

--- a/footer.html
+++ b/footer.html
@@ -32,7 +32,7 @@
                 <p>For any inquires, recommendations, or bug reports, please contact the email listed 
                     below. I will try to reply within a reasonable amount of time. The site is under 
                     construction and more projects are being worked on. Happy Coding :) <br><br>
-                    Inquires: official@ajouhari.com <br>
+                    Inquires: services@ajouhari.com <br>
                     Support: support@ajouhari.com</p>
             </div>
         </article>
