--- a/algorithms.html
+++ b/algorithms.html
@@ -31,7 +31,7 @@
                 <p>Many of our everyday tasks are rather menial, and can easily be automated or assisted by computer 
                     algorithms. Available is a list of algorithms that serve many different purposes. Each are 
                     labelled by their complexity, instructions, and the date at which they were created.</p>
-                    <button onclick="location.href='https://github.com/ajouhari/algorithms/tree/master/Easy'" type="button"><span>View Code In Github</span></button>
+                    <button onclick="location.href='https://github.com/ajouhari/algorithms'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
                 <img src="./Resources/Icons/gears-icon.png" alt="General Algorithms">
