--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
           <li><a href="./algorithms.html">Algorithms</a></li>
           <li><a href="./web-design.html">Web Design</a></li>
           <li><a href="./games.html">Games</a></li>
-          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><img src="./Resources/Icons/menu-icon.png"></a></li>
         </nav>
       </div>
     </div>
