--- a/pages/web-design.html
+++ b/pages/web-design.html
@@ -7,8 +7,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games</title>
-    <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <title>Web Design</title>
+    <link href="../stylesheets/general.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
@@ -24,17 +24,16 @@
     <main>
         <article class="flex">
             <div class="mobile">
-                <img src="./Resources/Icons/Fox Cover.png" alt="Stumble">
+                <img src="../images/icons/web-design-icon.png" alt="Web Design">
             </div>
             <div class="info">
-                <h1>Stumble</h1>
-                <p>Stumble is my first game development project, making this game took a great deal of trial and error. But eventually, I got a working model as a 
-                    foundation to what will later become a fully fledged, multi-level game. This was produced using the Unity framework, and the Bolt and Sunnyland 
-                    assets. The game is currently not supported on mobile and tablets.</p>
-                    <button onclick="location.href='./stumble.html'" type="button"><span>Play Beta</span></button>
+                <h1>Web Design</h1>
+                <p>Even though I like to bash some websites for being buggy and having a bad design, a journey of a thousand miles starts with one step, and it never 
+                    hurts to try. Hopefully my repositories can be of some use. Here I showcase my web design progress, the good, the bad, and the ugly.</p>
+                    <button onclick="location.href='https://github.com/ajouhari/web-development'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="./Resources/Icons/Fox Cover.png" alt="Stumble">
+                <img src="../images/icons/web-design-icon.png" alt="Web Design">
             </div>
         </article>
         <hr>
