--- a/pages/algorithms.html
+++ b/pages/algorithms.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithms</title>
-    <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="../stylesheets/general.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
@@ -24,7 +24,7 @@
     <main>
         <article class="flex">
             <div class="mobile">
-                <img src="./Resources/Icons/gears-icon.png" alt="General Algorithms">
+                <img src="../images/icons/gears-icon.png" alt="General Algorithms">
             </div>
             <div class="info">
                 <h1>General Algorithms</h1>
@@ -34,13 +34,13 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="./Resources/Icons/gears-icon.png" alt="General Algorithms">
+                <img src="../images/icons/gears-icon.png" alt="General Algorithms">
             </div>
         </article>
         <hr>
         <article class="flex">
             <div class="mobile">
-                <img src="./Resources/Icons/nodes-icon.png" alt="Search Algorithms">
+                <img src="../images/icons/nodes-icon.png" alt="Search Algorithms">
             </div>
             <div class="info">
                 <h1>Search Algorithms</h1>
@@ -50,13 +50,13 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms/tree/master/Search'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="./Resources/Icons/nodes-icon.png" alt="Search Algorithms">
+                <img src="../images/icons/nodes-icon.png" alt="Search Algorithms">
             </div>
         </article>
         <hr>
         <article class="flex">
             <div class="mobile">
-                <img src="./Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
+                <img src="../images/icons/sorted-bars-icon.png" alt="Sort Algorithms">
             </div>
             <div class="info">
                 <h1>Sort Algorithms</h1>
@@ -66,7 +66,7 @@
                     <button onclick="location.href='https://github.com/ajouhari/algorithms'" type="button"><span>View Code In Github</span></button>
             </div>
             <div class="icon">
-                <img src="./Resources/Icons/sorted-bars-icon.png" alt="Sort Algorithms">
+                <img src="../images/icons/sorted-bars-icon.png" alt="Sort Algorithms">
             </div>
         </article>
         <hr>
