--- a/pages/error.html
+++ b/pages/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./Stylesheet/error.css" type="text/css" rel="stylesheet">
+    <link href="../stylesheets/error.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="banner">
