--- a/pages/games.html
+++ b/pages/games.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games</title>
-    <link href="./Stylesheet/general.css" type="text/css" rel="stylesheet">
+    <link href="../stylesheets/general.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
@@ -24,7 +24,7 @@
     <main>
         <article class="flex">
             <div class="mobile">
-                <img src="./Resources/Icons/Fox Cover.png" alt="Stumble">
+                <img src="../images/icons/stumble-fox-icon.png" alt="Stumble">
             </div>
             <div class="info">
                 <h1>Stumble</h1>
@@ -34,7 +34,7 @@
                     <button onclick="location.href='./stumble.html'" type="button"><span>Play Beta</span></button>
             </div>
             <div class="icon">
-                <img src="./Resources/Icons/Fox Cover.png" alt="Stumble">
+                <img src="../images/icons/stumble-fox-icon.png" alt="Stumble">
             </div>
         </article>
         <hr>
