--- a/pages/header.html
+++ b/pages/header.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Header</title>
   <link href="../stylesheets/header.css" type="text/css" rel="stylesheet">
-  <script src="../javascript/nav-dropdown.js"></script>
+  <script src="../javascript/nav-dropdown.js" defer></script>
 </head>
 <body>
   <header>
