--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../stylesheets/general.css" type="text/css" rel="stylesheet">
+    <link href="../assets/css/main.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
@@ -24,7 +24,7 @@
     <main>
         <article class="flex about">
             <div class="about-image-cropped">
-                <img src=".,/images/personal/abdulrahman-cropped.jpg" alt="Abdulrahman Jouhari">
+                <img src="../images/personal/abdulrahman-cropped.jpg" alt="Abdulrahman Jouhari">
             </div>
             <div class="about-image">
                 <img src="../images/personal/abdulrahman.jpg" alt="Abdulrahman Jouhari">
