--- a/pages/algorithms.html
+++ b/pages/algorithms.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithms</title>
-    <link href="../stylesheets/general.css" type="text/css" rel="stylesheet">
+    <link href="../assets/css/main.css" type="text/css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script> 
     $(function(){
