--- a/pages/footer.html
+++ b/pages/footer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
-    <link href="../stylesheets/footer.css" type="text/css" rel="stylesheet">
+    <link href="../assets/css/footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <footer>
