--- a/pages/header.html
+++ b/pages/header.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Header</title>
-  <link href="../stylesheets/header.css" type="text/css" rel="stylesheet">
-  <script src="../javascript/nav-dropdown.js" defer></script>
+  <link href="../assets/css/header.css" type="text/css" rel="stylesheet">
+  <script src="../assets/js/nav-dropdown.js" defer></script>
 </head>
 <body>
   <header>
